# fine-tune-GLM

./: .gitignore  inference.py  merge_lora.py  neurax_colab_training.ipynb  presentation_finetuning_vs_rag.md  requirements.txt  run_training.sh  test_training.py  train_chinese_model.py  train_simple.py
dataset/: fine-tune-GLM.code-workspace  neurax_valid.jsonl
neurax-inference-rust/: Cargo.toml  README.md
neurax-inference-rust/src/: main.rs
